Remove min-width and min-height on body to resolve overlap issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,8 +14,6 @@ body * {
 }
 
 body {
-    min-height: 100vh;
-    min-width: 100vw;
     margin: 0 auto;
     display: grid;
     grid-template-rows: auto 1fr auto;
